# florwrs-std

./: Cargo.toml
benches/: js_benchmark.rs
scripts/: calc.js
src/: lib.rs  nodes.rs
src/nodes/: add.rs  arithmetic.rs  basic.rs  binops.rs  debug.rs  http.rs  javascript.rs  timer.rs  transform.rs  value.rs
src/nodes/arithmetic/: add.rs  bin_op.rs  div.rs  mul.rs  sub.rs
src/nodes/binops/: add.rs  and.rs  binops.rs  div.rs  mul.rs  or.rs  sequential.rs  sub.rs
src/nodes/control/: switch.rs
src/nodes/io/: file.rs
src/nodes/transform/: binary.rs  json.rs  vec.rs
tests/: lib.rs
tests/nodes/: add.rs  basic.rs  chain.rs  debug.rs  m1_demo.rs  mod.rs  test_add.rs  test_bin_op.rs  test_chain.rs  test_debug.rs  test_http.rs  test_javascript.rs  test_node.rs  test_timer.rs  test_value.rs  timer.rs  value.rs
tests/nodes/transform/: mod.rs  test_json.rs
tests/sched/: mod.rs  sched.rs  test_sched.rs
