[package]
name = "flowrs-std"
version = "0.1.0"
edition = "2021"
authors = ["wuermseer.florian@gmail.com", "markus.friedrich@hm.edu"]
description = "A standard library for the flowrs library."
repository = "https://github.com/flow-rs/flowrs-std"
license = "Apache-2.0"
license-file = "LICENSE"
readme = "README.md"
documentation = "https://docs.rs/flowrs-std"
keywords = ["flow", "fbp", "wasm", "std"]
categories = ["data-structures", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
flowrs = "0.1.0"
flowrs-derive = "0.1.0"
serde_json = "1.0.104"
