[package]
name = "flowrs-std"
version = "0.2.0"
edition = "2021"
authors = ["wuermseer.florian@gmail.com", "markus.friedrich@hm.edu"]
description = "A standard library for the flowrs library."
repository = "https://github.com/flow-rs/flowrs-std"
license = "Apache-2.0"
license-file = "LICENSE"
readme = "README.md"
documentation = "https://docs.rs/flowrs-std"
keywords = ["flow", "fbp", "wasm", "std"]
categories = ["data-structures", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.72"
flowrs = {path = "../flowrs"}  # "0.1.0"
serde = "1.0.184"
serde_json = "1.0.104"
wasm-bindgen = "0.2.87"
bincode = "1.3.3"
web-time = "0.2.0"
reqwest = { version="0.11", features=[ "blocking" ] }
boa_engine = { version = "0.17" }

# required for compiling boa to wasm
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
mockito = "1.2"
criterion = "0.5"

[[bench]]
name = "js_benchmark"
harness = false